# LLM-Thing-Explainer

./: .gitignore  LICENSE  README.md  chat.py  gradio_app.py  pyproject.toml  requirements.txt
llm_thing_explainer/: logits_process.py  token_list.py
llm_thing_explainer/reader/: __init__.py  cat.py  cat.txt  chinese_500.py  chinese_500.txt  mandarin_500.py  mandarin_500.txt  xkcd_1000.py
llm_thing_explainer/src/: state_machine.py  token_list.py
src/: logits_process.py  state_machine.py  token_list.py
